--- a/npkpir_23/web/ksiegowa/sub/podatnikust/aktywnedokumentyksiegowe.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/podatnikust/aktywnedokumentyksiegowe.xhtml
@@ -163,6 +163,8 @@
                      <h:selectBooleanCheckbox value="#{podatnikView.selectedDokKsi.tylkovat}" />
                      <h:outputText value=" dokument tylko dla jpk: " />
                      <h:selectBooleanCheckbox value="#{podatnikView.selectedDokKsi.tylkojpk}" />
+                      <h:outputText value=" dokument tylko dla jpk: " />
+                     <h:selectBooleanCheckbox value="#{podatnikView.selectedDokKsi.nrprojektuwwierszu}" />
                       <h:outputText value=" dokument tylko dla CIT: " />
                       <h:selectBooleanCheckbox value="#{podatnikView.selectedDokKsi.tylkopodatkowo}" />
                      <h:outputText value=" jpk oznaczenie 1: " />
