--- a/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
@@ -76,7 +76,7 @@
                     <p:ajax event="change" partialSubmit="true"/>
                 </p:selectBooleanCheckbox>
                 <h:outputText value="stawka ryczałtu do księgowania"  rendered="#{WpisView.ryczalt0ksiega1 eq false}"/>
-                <p:selectOneMenu value="#{fakturaView.stawkaryczaltuksiegowanie}" style="width: 100px;"  rendered="#{WpisVieryczalt0ksiega1lt eq false}">
+                <p:selectOneMenu value="#{fakturaView.stawkaryczaltuksiegowanie}" style="width: 100px;"  rendered="#{WpisView.ryczalt0ksiega1 eq false}">
                     <f:selectItems value="#{kolmn.stawkiRyczalt}" var="loop" itemLabel="#{loop}" itemValue="#{loop}"/>
                 </p:selectOneMenu>
             
