dok nowa definicja kolumny dataK

--- a/npkpir_23/web/kadrowa/sub/dochoddladra.xhtml
+++ b/npkpir_23/web/kadrowa/sub/dochoddladra.xhtml
@@ -14,7 +14,7 @@
                     <f:view>
                         <h:form id="formtabela">
                             <p:outputPanel>
-                                <h:outputText value="W przypadku przyjęcia firmy z historią w trakcie roku nalezy cofnąć sie i wygenerować wiersze dla poprzednich miesięcy. Program wartości narastająco bierze z tej tabeli" style="color:red;"/>
+                                <h:outputText value="W przypadku przyjęcia firmy z historią w trakcie roku nalezy wygenerować kwoty w zakładce Rok. Program wartości narastająco bierze z tej tabeli" style="color:red;"/>
                             </p:outputPanel>
                             <p:panelGrid layout="tabular" columns="12">
                                 <h:outputText value="rok deklaracji:" style="text-shadow: #6374AB 1px -1px 1px"/>
