--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza.xhtml
@@ -175,6 +175,7 @@
                     <f:facet name="header">
                         <h:outputText value="data dok"/>
                     </f:facet>
+                    <h:outputText value="#{item.data}" rendered="#{item.zapisbo eq true}" style="color: blue;"/>
                     <h:outputText value="#{item.data}" rendered="#{item.faktura0rozliczenie1 eq true}"/>
                     <h:outputText value="#{item.data}" rendered="#{item.faktura0rozliczenie1 eq false and item.faktura.korekta eq false}"/>
                     <h:outputText value="#{item.data}" style="color: red;" rendered="#{item.faktura0rozliczenie1 eq false and item.faktura.korekta eq true}"/>
@@ -189,6 +190,7 @@
                     <f:facet name="header">
                         <h:outputText value="dokument"/>
                     </f:facet>
+                    <h:outputText value="#{item.rodzajDok} #{item.nrDok}" rendered="#{item.zapisbo eq true}"/>
                     <h:outputText value="#{item.rodzajDok} #{item.nrDok}" rendered="#{item.faktura0rozliczenie1 eq true}"/>
                     <h:outputText value="#{item.rodzajDok} #{item.nrDok}" rendered="#{item.faktura0rozliczenie1 eq false and item.faktura.korekta eq false}"/>
                     <h:outputText value="#{item.rodzajDok} #{item.nrDok}" style="color: red;" rendered="#{item.faktura0rozliczenie1 eq false and item.faktura.korekta eq true}"/>
@@ -200,6 +202,7 @@
                      
                      <p:cellEditor>
                             <f:facet name="output">
+                                <h:outputText value="#{item.wprowadzil}" rendered="#{item.zapisbo eq true}" style="color: blue;"/>
                                 <h:outputText value="#{item.faktura.autor}"/>
                             </f:facet>
                             <f:facet name="input">
