--- a/kadry/src/main/webapp/pracownikhistoria/index.xhtml
+++ b/kadry/src/main/webapp/pracownikhistoria/index.xhtml
@@ -30,6 +30,7 @@
                                          <p:menuitem icon="pi pi-ellipsis-v" value="angaże w firmie bież." style="width: 150px" action="Pracownik"/>
                                          <p:menuitem icon="pi pi-ellipsis-v" value="dane pracowników" style="width: 150px" action="Pracownikdane"/>
                                          <p:menuitem icon="pi pi-ellipsis-v" value="staż pracowników" style="width: 150px" action="Pracownikhistoria"/>
+<p:menuitem icon="pi pi-ellipsis-v" value="przekroczenia oddel." style="width: 150px" action="Pracownikoddelegowanie"/>
                                          <p:menuitem icon="pi pi-ellipsis-v" value="grupy do list płac" style="width: 150px" action="Pracownikgrupy"/>
                                           <p:menuitem icon="pi pi-ellipsis-v" value="alerty - pracownicy" style="width: 150px" action="Pracownikalerty"/>
                                           <p:menuitem icon="pi pi-ellipsis-v" value="aneksy do umów" style="width: 150px" action="Pracownikaneksy"/>
